--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <meta content="black-translucent" name="apple-mobile-web-app-status-bar-style"/>
     <meta content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover"
           name="viewport"/>
-    <meta content="#FAFAFA" media="(prefers-color-scheme: light)" name="theme-color"/>
-    <meta content="#18181B" media="(prefers-color-scheme: dark)" name="theme-color"/>
+    <meta content="#f4f4f5" media="(prefers-color-scheme: light)" name="theme-color"/>
+    <meta content="#27272a" media="(prefers-color-scheme: dark)" name="theme-color"/>
     <meta content="A Simple but Powerful RSS Reader for Miniflux" name="description"/>
     <link href="https://fonts.loli.net/css2?family=Noto+Sans+SC&family=Noto+Serif+SC:wght@400;500;700&display=swap"
           rel="stylesheet">
