--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link href="site.webmanifest" rel="manifest"/>
     <meta content="no-referrer" name="referrer"/>
     <meta content="black-translucent" name="apple-mobile-web-app-status-bar-style"/>
+    <meta content="yes" name="apple-mobile-web-app-capable"/>
+    <meta content="yes" name="mobile-web-app-capable"/>
     <meta content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover"
           name="viewport"/>
     <meta content="#f4f4f5" media="(prefers-color-scheme: light)" name="theme-color"/>
