--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
     <meta content="black-translucent" name="apple-mobile-web-app-status-bar-style"/>
     <meta content="yes" name="apple-mobile-web-app-capable"/>
     <meta content="yes" name="mobile-web-app-capable"/>
+    <meta content="yes" name="apple-touch-fullscreen"/>
     <meta content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover"
           name="viewport"/>
     <meta content="#f4f4f5" media="(prefers-color-scheme: light)" name="theme-color"/>
     <meta content="#27272a" media="(prefers-color-scheme: dark)" name="theme-color"/>
     <meta content="A Simple but Powerful RSS Reader for Miniflux" name="description"/>
+    <script src="https://unpkg.com/ios-pwa-splash@1.0.0/cdn.min.js"></script>
     <link href="https://fonts.loli.net/css2?family=Noto+Sans+SC&family=Noto+Serif+SC:wght@400;500;700&display=swap"
           rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/lxgw-wenkai-webfont@1.1.0/style.css" rel="stylesheet">
@@ -24,6 +26,7 @@
 </head>
 <body class="bg-content2">
 <div id="root"></div>
+<script>iosPWASplash('web-app-manifest-512x512.png', '#f4f4f5');</script>
 <script src="/src/main.jsx" type="module"></script>
 </body>
 </html>
