docker support(WIP)

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="favicon.svg" rel="icon" type="image/svg+xml"/>
     <link href="favicon.ico" rel="shortcut icon"/>
     <link href="apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180"/>
-    <meta content="Reactflux" name="apple-mobile-web-app-title"/>
+    <meta content="Nextflux" name="apple-mobile-web-app-title"/>
     <link href="site.webmanifest" rel="manifest"/>
     <meta content="no-referrer" name="referrer"/>
     <meta content="black-translucent" name="apple-mobile-web-app-status-bar-style"/>
@@ -21,7 +21,7 @@
     <link href="https://fonts.loli.net/css2?family=Noto+Sans+SC&family=Noto+Serif+SC:wght@400;500;700&display=swap"
           rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/lxgw-wenkai-webfont@1.1.0/style.css" rel="stylesheet">
-    <title>Reactflux</title>
+    <title>Nextflux</title>
 </head>
 <body class="bg-content2">
 <div id="root"></div>
