feat: add a loading screen

--- a/index.html
+++ b/index.html
@@ -24,7 +24,14 @@
     <title>Nextflux</title>
 </head>
 <body class="bg-content2">
-<div id="root"></div>
-<script src="/src/main.jsx" type="module"></script>
+  <div id="splash-screen" class="fixed z-50 inset-0 flex items-center justify-center bg-background [&.fade-out]:opacity-0 transition-opacity duration-400">
+    <div class="flex flex-col items-center gap-4">
+      <div class="splash-logo animate-in fade-in zoom-in duration-400">
+        <div class="loading-spinner w-6 h-6 border-3 border-primary border-t-default rounded-full animate-spin"></div>
+      </div>
+    </div>
+  </div>
+  <div id="root"></div>
+  <script src="/src/main.jsx" type="module"></script>
 </body>
 </html>
